--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
 <body>
     <div class="header">
         <nav>
-            <img src="assets/basquiat-logo.jpg" alt="logo">
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
+            <div class="left-side">
+                <img src="assets/basquiat-logo.jpg" alt="logo">
+            </div>
+            <div class="right-side">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
         </nav>
-        <div class="header-title">
-            <h1>This website is awesome</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat sit harum quasi quibusdam ducimus nihil eaque totam cum, debitis quo tempore ipsam enim laborum nemo accusamus molestiae id optio illum.</p>
-            <button>Yee-man</button>
-        </div>
-        <div class="title-image">
-            <img src="assets/basquiat-title" alt="">
+        <div class="title-container">
+            <div class="header-title">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat sit harum quasi quibusdam ducimus
+                    nihil eaque totam cum, debitis quo tempore ipsam enim laborum nemo accusamus molestiae id optio
+                    illum.</p>
+                <button>Yee-man</button>
+            </div>
+            <div class="title-image">
+                <img src="assets/basquiat-title.jpg" alt="">
+            </div>
         </div>
     </div>
 </body>
