basquiat gallery done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
             </div>
         </header>
     </div>
+    <div class="card-wrapper">
+        <h2>Gallery</h2>
+        <div class="card-container">
+            <div class="card">
+                <img src="assets/boxer1.jpg" alt="">
+                <p>boxer</p>
+            </div>
+            <div class="card">
+                <img src="assets/bom2.jpg" alt="">
+                <p>Bird on Moneh</p>
+            </div>
+            <div class="card">
+                <img src="assets/selfportrait3.jpg" alt="">
+                <p>yuhuow</p>
+            </div>
+            <div class="card">
+                <img src="assets/rice4.jpg" alt="">
+                <p>Motherfucking lorem </p>
+            </div>
+        </div>
+    </div>
+    
+
 </body>
 
 </html>
