--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <header>
             <nav>
                 <div class="left-side">
-                    <img src="assets/50f2cfaeb7211f3e5da7f4a79e68f6d3--jean-basquiat-jean-michel-basquiat-crown.jpg" alt="logo">
+                    <img src="assets/50f2cfaeb7211f3e5da7f4a79e68f6d3--jean-basquiat-jean-michel-basquiat-crown.jpg"
+                        alt="logo">
                 </div>
                 <div class="right-side">
                     <ul>
@@ -61,7 +62,24 @@
             </div>
         </div>
     </div>
-    
+    <section class="quotes">
+        <p>"This is so inspiring. you should be inspired by this quote. or maybe this quote pisses you off? i don't know
+            man. all i know is, this quote is for filling up space. thanks for reading. motherfucker " <span
+                class="masjon">-Mas Joni, Mas mas biasa </span></p>
+    </section>
+    <div class="cta-button">
+        <div class="cta-wrap">
+            <h3>Call to action! It's time!</h3>
+            <p>Just sign up to our product by clicking the button</p>
+        </div>
+        <button>Sign Up</button>
+    </div>
+    <footer>
+        <p>
+            Copyright &#169; Nabiel Alif Georgy
+        </p>
+    </footer>
+
 
 </body>
 
