changed the quote and gallery caption

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </header>
     </div>
+    
     <div class="card-wrapper">
         <h2>Gallery</h2>
         <div class="card-container">
@@ -58,14 +59,15 @@
             </div>
             <div class="card">
                 <img src="assets/rice4.jpg" alt="">
-                <p>Motherfucking lorem </p>
+                <p>Lo Motherfucking rem </p>
             </div>
         </div>
     </div>
+    
     <section class="quotes">
         <p>"This is so inspiring. you should be inspired by this quote. or maybe this quote pisses you off? i don't know
-            man. all i know is, this quote is for filling up space. thanks for reading. motherfucker " <span
-                class="masjon">-Mas Joni, Mas mas biasa </span></p>
+            man. all i know is this quote is for filling up some space. thanks for reading. motherfucker" <span
+                class="masjon">-Kartono, Pria Bersahaja  </span></p>
     </section>
     <div class="cta-button">
         <div class="cta-wrap">
